// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display choice between import or creation 1`] = `
<div>
  <OrganizationDetailsStep
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    stepTitle="onboarding.import_organization.import_org_details"
  >
    <div
      className="huge-spacer-bottom"
    >
      <p
        className="display-flex-center big-spacer-bottom"
      >
        <FormattedMessage
          defaultMessage="onboarding.import_organization_x"
          id="onboarding.import_organization_x"
          values={
            Object {
              "avatar": <img
                alt="BitBucket"
                className="little-spacer-left"
                src="/images/sonarcloud/bitbucket.svg"
                width={16}
              />,
              "name": <strong>
                name-foo
              </strong>,
            }
          }
        />
        <DeleteButton
          className="little-spacer-left"
          onClick={[MockFunction]}
        />
      </p>
      <RadioToggle
        disabled={false}
        name="filter"
        onCheck={[Function]}
        options={
          Array [
            Object {
              "label": "onboarding.import_organization.create_new",
              "value": "create",
            },
            Object {
              "label": "onboarding.import_organization.bind_existing",
              "value": "bind",
            },
          ]
        }
        value={null}
      />
    </div>
  </OrganizationDetailsStep>
  <PlanStep
    almApplication={
      Object {
        "backgroundColor": "#0052CC",
        "iconPath": "\\"/static/authbitbucket/bitbucket.svg\\"",
        "installationUrl": "https://bitbucket.org/install/app",
        "key": "bitbucket",
        "name": "BitBucket",
      }
    }
    almOrganization={
      Object {
        "avatar": "http://example.com/avatar",
        "description": "description-foo",
        "key": "key-foo",
        "name": "name-foo",
        "personal": false,
        "privateRepos": 0,
        "publicRepos": 3,
        "url": "http://example.com/foo",
      }
    }
    createOrganization={[Function]}
    onDone={[MockFunction]}
    onUpgradeFail={[MockFunction]}
    open={false}
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</div>
`;

exports[`should render prefilled and create org 1`] = `
<div>
  <OrganizationDetailsStep
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    stepTitle="onboarding.import_organization.import_org_details"
  >
    <div
      className="huge-spacer-bottom"
    >
      <p
        className="display-flex-center big-spacer-bottom"
      >
        <FormattedMessage
          defaultMessage="onboarding.import_organization_x"
          id="onboarding.import_organization_x"
          values={
            Object {
              "avatar": <img
                alt="BitBucket"
                className="little-spacer-left"
                src="/images/sonarcloud/bitbucket.svg"
                width={16}
              />,
              "name": <strong>
                name-foo
              </strong>,
            }
          }
        />
        <DeleteButton
          className="little-spacer-left"
          onClick={[MockFunction]}
        />
      </p>
    </div>
    <OrganizationDetailsForm
      onContinue={[MockFunction]}
      organization={
        Object {
          "avatar": "http://example.com/avatar",
          "description": "description-foo",
          "key": "key-foo",
          "name": "name-foo",
          "personal": false,
          "privateRepos": 0,
          "publicRepos": 3,
          "url": "http://example.com/foo",
        }
      }
      submitText="continue"
    />
  </OrganizationDetailsStep>
  <PlanStep
    almApplication={
      Object {
        "backgroundColor": "#0052CC",
        "iconPath": "\\"/static/authbitbucket/bitbucket.svg\\"",
        "installationUrl": "https://bitbucket.org/install/app",
        "key": "bitbucket",
        "name": "BitBucket",
      }
    }
    almOrganization={
      Object {
        "avatar": "http://example.com/avatar",
        "description": "description-foo",
        "key": "key-foo",
        "name": "name-foo",
        "personal": false,
        "privateRepos": 0,
        "publicRepos": 3,
        "url": "http://example.com/foo",
      }
    }
    createOrganization={[Function]}
    onDone={[MockFunction]}
    onUpgradeFail={[MockFunction]}
    open={false}
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</div>
`;
